@@ -23,7 +23,8 @@ class GpayConfig
     public const KEY_CC_TYPES_CARDKNOX_MAPPER = 'cctypes_cardknox_mapper';
     public const GPAY_PAYMENT_ACTION = 'payment/cardknox_google_pay/payment_action';
     public const GPAY_SPLIT_CAPTURE_ENABLED = 'payment/cardknox_google_pay/split_capture_enabled';
-
+    public const GPAY_BUTTON_TYPE = 'payment/cardknox_google_pay/gp_button_type';
+    public const GOOGLEPAY_ENABLE_ON_CARTPAGE = 'payment/cardknox_google_pay/cardknox_googlepay_enable_cart';
     /**
      * @var ScopeConfigInterface
      */
@@ -121,5 +122,25 @@ class GpayConfig
     public function isGPaySplitCaptureEnabled()
     {
         return (bool) $this->getValue(self::GPAY_SPLIT_CAPTURE_ENABLED);
+    }
+
+    /**
+     * Get GooglePay Button Type function
+     *
+     * @return string
+     */
+    public function getGooglePayButtonType()
+    {
+        return $this->getValue(self::GPAY_BUTTON_TYPE);
+    }
+
+    /**
+     * Check GooglePay is enable for cart page function
+     *
+     * @return boolean
+     */
+    public function isEnabledGooglePayOnCartPage()
+    {
+        return (bool) $this->getValue(self::GOOGLEPAY_ENABLE_ON_CARTPAGE);
     }
 }
