@@ -139,6 +139,23 @@
                             <field id="cardknox_gpay_active">1</field>
                         </depends>
                     </field>
+                    <field id="gp_button_type" type="select" showInDefault="1" showInWebsite="1" showInStore="1" sortOrder="51">
+                        <label>Google Pay Button Type</label>
+                        <source_model>CardknoxDevelopment\Cardknox\Model\Config\Backend\Source\ConfigGooglePayButtonType</source_model>
+                        <config_path>payment/cardknox_google_pay/gp_button_type</config_path>
+                        <comment>The Google Pay place order button type</comment>
+                        <depends>
+                            <field id="cardknox_gpay_active">1</field>
+                        </depends>
+                    </field>
+                    <field id="cardknox_googlepay_enable_cart" translate="label" type="select" sortOrder="11" showInDefault="1" showInWebsite="1" showInStore="0">
+                        <label>Enable Google Pay on Cart Page</label>
+                        <config_path>payment/cardknox_google_pay/cart_page_enable</config_path>
+                        <source_model>Magento\Config\Model\Config\Source\Yesno</source_model>
+                        <depends>
+                            <field id="cardknox_gpay_active">1</field>
+                        </depends>
+                    </field>
                     <field id="payment_action" translate="label" type="select" sortOrder="45" showInDefault="1" showInWebsite="1" showInStore="0">
                         <label>GooglePay Payment Action</label>
                         <source_model>CardknoxDevelopment\Cardknox\Model\Adminhtml\Source\PaymentAction</source_model>
@@ -231,7 +248,7 @@
                         <label>Apple Pay Button Type</label>
                         <source_model>CardknoxDevelopment\Cardknox\Model\Config\Backend\Source\ConfigApplePayButtonType</source_model>
                         <config_path>payment/cardknox_apple_pay/ap_button_type</config_path>
-                        <comment>The Apple Pay place order button style</comment>
+                        <comment>The Apple Pay place order button type</comment>
                         <depends>
                             <field id="cardknox_applepay_active">1</field>
                         </depends>
