@@ -3,6 +3,9 @@
 - feat: add tax & discount to summary in GooglePay & ApplePay Popup on cart page
 - fix: GooglePay & ApplePay not working if a quote has only a virtual product on cart page
 - remove customer login condition for adding shipping & billing address when order place on cart page
+- Add new 2 configuration for GooglePay
+    1. GooglePay Button Type
+    2. Enable GooglePay On the Cart Page
 
 1.0.21
 - Add ApplePay to cart page
